# advanced-hybrid-qdrant-search

./: .gitignore  CLAUDE.md  README.md  app.py  documents.parquet  main.py  pyproject.toml  query_executor.py  query_parser.py  seed_data.py  tests.ipynb
.claude/: settings.local.json
examples/: dash_app.py
specs/: payload-filter.md
src/qdrant_advanced_search/: __init__.py  executor.py  parser.py
tests/: test_parser.py
