[project]
name = "qdrant-advanced-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash>=4.0.0",
    "datasets>=4.7.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.3.0",
]
